# buckethandler

./: .gitignore  LICENSE  README.md  pyproject.toml
src/buckethandler/: __init__.py  b2.py  cli.py
