[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buckethandler"
version = "0.9.0"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
	{name = "Jesse Janzer", email = "jjanzer@gmail.com"}
]

dependencies = [
	"requests"
]

[project.scripts]
bh = "buckethandler.cli:main"

[project.urls]
Homepage = "https://github.com/jjanzer/buckethandler"
